--- a/buoi4/style.css
+++ b/buoi4/style.css
@@ -47,6 +47,7 @@ body{
 }
 .menu-list{
     display: flex;
+    position: relative;
     
 }
 
@@ -76,7 +77,7 @@ body{
     box-sizing: border-box;
     display: block;
 }
-#nenngoaicung{
+#nentren{
     padding-top: 3rem;
     padding-bottom: 0;
     padding-left: 0;
@@ -247,25 +248,7 @@ a{
     padding-right: 15px;
     padding-left: 15px;
 }
-#intro {
-    padding: 20px 0;
-    float: left;
-    width: 25%;
-    text-align: center;
-}
-#intro-text {
-    margin-top: 15px;
-    color: #464646;
-    font-size: 1rem;
-}
-#intro-description {
-    margin-top: 10px;
-    font-size: 14px;
-    font-weight: 300;
-    color: #999;
-    width: 80%;
-    margin: auto;
-}
+
 #route{
     padding-bottom: 5rem;
     background-color: #e4f2fd;
@@ -456,8 +439,8 @@ h2 {
 }
 
 .col-sm-6 {
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
+
+    flex: 0 0 23%;
     max-width: 50%;
 }
 #chats{
@@ -529,3 +512,26 @@ footer a {
 .list-inline.social-links .fab {
     border-radius: 0
 }
+.fix{
+    flex-direction: row;
+}
+.sub-menu{
+    /* padding-top: 20px; */
+    position: absolute;
+    background-color:white;
+    display: none;
+    
+    
+}
+.sub-menu li{
+    background-color: white;
+    /* margin: auto 10px 10px 10px; */
+    
+}
+.sub-menu li a{
+    color:black;
+}
+.menu-list li:hover .sub-menu{
+    display: block;
+}
+   
