--- a/buoi16/part-1/style.css
+++ b/buoi16/part-1/style.css
@@ -21,11 +21,11 @@ body {
     display: flex;
     justify-content: center;
     background: #fff;
-    padding: 100px;
+    padding: 0px 50px 0px 50px;
 }
 
 .game-container {
-    margin-right: 100px;
+    margin-right: 0px;
     box-shadow: 0 0 10px #ccc;
     border-radius: 4px;
 }
@@ -48,6 +48,8 @@ h2 {
 }
 
 .main {
+    margin-top: 50px;
+    margin-bottom: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -100,102 +102,3 @@ button {
     margin-left: 30px;
 }
 
-/* LEADER BOARD */
-.lb-wrapper {
-    width: 500px;
-    transition: transform .3s ease-out;
-    box-shadow: 0 0 10px #ccc;
-    border-radius: 4px;
-}
-
-.list-header,
-.list-item {
-    height: 60px;
-    background-color: #faf7f8;
-    display: flex;
-    flex-direction: row;
-    font-weight: 700;
-    border-bottom: 1px solid #fff;
-}
-
-.list-header {
-    line-height: 60px;
-}
-
-.list-player-wrapper {
-    max-height: 380px;
-    overflow: auto;
-}
-
-.list-item {
-    transition: all .2s ease-out;
-    cursor: pointer;
-}
-
-.list-item:hover {
-    background-color: #fff;
-}
-
-.list-header .list-rank,
-.list-item .list-rank {
-    flex: 0 0 15%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #4B79CC;
-    font-weight: 400;
-}
-
-.list-header .list-info,
-.list-item .list-info {
-    flex: 0 0 70%;
-}
-
-.list-header .list-info {
-    color: #4B79CC;
-}
-
-.list-header .list-score,
-.list-item .list-score {
-    flex: 0 0 15%;
-}
-
-.list-header .list-score {
-    color: #4B79CC;
-}
-
-.list-item .list-info {
-    display: flex;
-    align-items: center;
-}
-
-.list-item .list-score {
-    line-height: 60px;
-}
-
-.list-score .top-item-icon {
-    margin-right: .3rem;
-    color: #FFC107;
-}
-
-.list-score .top-item-point {
-    color: #272627;
-}
-
-.list-info img {
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    margin-right: 1rem;
-    margin-left: 0;
-}
-
-.info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.list-score {
-    flex: 0 0 20%;
-}
