--- a/CRUD 2/demo/src/main/resources/templates/index.html
+++ b/CRUD 2/demo/src/main/resources/templates/index.html
@@ -1,28 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
+ead>
   <head th:replace="template::head"> </head>
 </head>
 
 <body>
-  <div class="navBar" th:replace="template::navBar"></div>
+  <div class="nav" >
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs|pills" id="navId" role="tablist">
+      <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: grey">
+        <div class="container">
+          <a th:href="@{/}" class="navbar-brand" style="color: goldenrod;">Home </a>
+          <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/search}">Search</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/add}">Add new</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </ul>
+    <div class="whitespace" style="padding-top: 56px"></div>
+  </div>
   <div class="context" align="center">
+  <form th:action="@{/}" method="GET">
+    <table class="table w-auto">
   
+      <div th:object="${sort}">
+        <tr>
+          <th style="padding-top: 15px;" >Sort by</th>
+          <td style="padding-top: 15px;">
+            <select name="sort">
+              <option th:selected="${#strings.equals(sort, '')}" value="">-- Select an Option --</option>
+              <option th:selected="${#strings.equals(sort, 'fullNameInc')}" value="fullNameInc">Full Name (A - Z)</option>
+              <option th:selected="${#strings.equals(sort, 'fullNameDec')}" value="fullNameDec">Full Name (Z - A)</option>
+            </select>
+            </td>
+            <td><pre><a><button type="submit" class="btn btn-primary">Sort</button></pre></a></td>
+      </div>
+    </table>
+  </form>
+  <h1 style="text-align: center;">All employees</h1>
     <table class="table table-striped w-auto">
       <thead class="bg-success text-white" style="background-color: aquamarine;">
         <tr style="text-align: center">
           <th>First Name</th>
           <th>Last Name</th>
-          <th>More detail</th>
+          <th>Email</th>
+          <th>See full info</th>
         </tr>
       </thead>
       <tbody>
         <tr th:each="employee: ${employees}">
-          <td th:text="${employee.first_name}"></td>
-          <td th:text="${employee.last_name}"></td>
-          <td><a th:href="@{/{id}(id=${employee.id})}" class="btn btn-primary" style="background-color: lightskyblue" >Access</a></td>
+          <td th:text="${employee.firstName}"></td>
+          <td th:text="${employee.lastName}"></td>
+          <td th:text="${employee.email}"></td>
+          <td><a th:href="@{/{id}(id=${employee.id})}" class="btn btn-primary" style="background-color: lightskyblue" >Click here</a></td>
         </tr>
       </tbody>
     </table>
